# FormRecognizer

./: Dockerfile  Pipfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
app/: apps.py  serializers.py  urls.py  views.py
core/: AutoRotation.py  FileDetails.py  ImageConversion.py  PaperItemization.py  TableColumnDetection.py  TableDataExtraction.py  TableDetection.py  logger.py
intics/: __init__.py  settings.py  urls.py  wsgi.py
table/: dataset.py  model.py  table_config.py  utils.py
utils/: config.py
