[tool.poetry]
name = "intics"
version = "2.0.0"
description = ""
authors = ["SOSP <sosp@halo.com>"]

[tool.poetry.dependencies]
python = "=3.8.10"
Django = "^4.0.2"
djangorestframework = "^3.13.1"
PyPDF2 = "^1.26.0"
opencv-python = "^4.5.5"
pdf2image = "^1.16.0"
pytesseract = "^0.3.9"
scipy = "^1.8.1"
pandas= "^1.2.3"
imutils= "^0.5.4"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
